tests/baselines/reference/genericInterfacesWithoutTypeArguments.errors.txt
tests/cases/compiler/genericInterfacesWithoutTypeArguments.ts(3,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericInterfacesWithoutTypeArguments.ts(4,10): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericInterfacesWithoutTypeArguments.ts (2 errors) ====
    interface I<T> { }
    class C<T> { }
    var i: I;
           ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var c: C<I>;
             ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    